--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link type="text/css" rel="stylesheet" href="CSS/normalize.css" />
-    <link href="http://cdn.bootcss.com/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css" rel="stylesheet">
     <link href="CSS/main.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
@@ -45,9 +45,9 @@
     </div>
 </div>
 <video src="alert.mp3" class="alerter"></video>
-<script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-<script src="http://cdn.bootcss.com/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.full.js"></script>
-<script src="http://cdn.bootcss.com/store.js/1.3.20/store.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.full.js"></script>
+<script src="https://cdn.bootcss.com/store.js/1.3.20/store.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
